# ContentEngineAI

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  LICENSE  LINTING.md  Makefile  README.md  REQUIREMENTS.md  SECURITY.md  STATUS.md  TESTING.md  TROUBLESHOOTING.md  VERSIONING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
config/: scrapers.yaml  video_producer.yaml
src/ai/: description_generator.py  script_generator.py
src/ai/prompts/: video_description.md  video_script.md
src/audio/: freesound_client.py
src/scraper/: __init__.py
src/scraper/amazon/: __init__.py  botasaurus_output.py  browser_functions.py  config.py  downloader.py  media_extractor.py  media_validator.py  models.py  scraper.py  search_builder.py  utils.py
src/scraper/base/: __init__.py  browser_utils.py  config.py  downloader.py  models.py  utils.py
src/utils/: __init__.py  async_io.py  background_processing.py  caching.py  circuit_breaker.py  connection_pool.py  memory_mapped_io.py  outputs_paths.py  performance.py  script_sanitizer.py
src/video/: assembler.py  config_validator.py  pipeline_graph.py  producer.py  result_types.py  stock_media.py  stt_functions.py  subtitle_generator_legacy_backup.py  subtitle_positioning.py  subtitle_utils.py  subtitle_validation.py  tts.py  unified_assembler_integration.py  unified_subtitle_generator.py  video_config.py
tests/: __init__.py  conftest.py  run_tests.py  test_ai_description_generator.py  test_ai_script_generator.py  test_assembler.py  test_assembler_decomposed.py  test_audio.py  test_botasaurus_scraper.py  test_circuit_breaker.py  test_cleanup.py  test_cleanup_integration.py  test_config_extensions.py  test_config_validator.py  test_integration.py  test_media_validation.py  test_media_validator.py  test_optimization_integration.py  test_outputs_structure.py  test_performance.py  test_pipeline_graph.py  test_producer.py  test_producer_cleanup.py  test_producer_performance.py  test_slideshow_images1_verification.py  test_slideshow_images_verification.py  test_stock_media.py  test_subtitle_utils.py  test_subtitle_validation.py  test_tts.py  test_unified_subtitle_positioning.py  test_utils.py  test_video_config.py
tools/: ass_effect_tester.py  cleanup_outputs.py  get_freesound_token.py  lint.py  performance_report.py
typings/aiohttp/: __init__.pyi
typings/botasaurus/: __init__.pyi
typings/pysrt/: __init__.pyi
typings/tenacity/: __init__.pyi
